test to fix navbar width on mobile

--- a/bookings/static/Bookings/css/style.css
+++ b/bookings/static/Bookings/css/style.css
@@ -180,7 +180,7 @@ img {
   width: 90%;
   height: 100%
   display: block;
-  max-width: 500px;
+  max-width: 300px;
   max-height: 300px;
   margin: 0 auto;
 }
